source/stylesheets/responsive/_application.sass
+media($small)
  %full-size
    +span-columns(4)
    margin:
      left: 0
      right: 0
    float: none
    margin-bottom: 20px

  %block-list-item
    +span-columns(4)
    margin:
      left: 0
      right: 0
      bottom: 20px
    padding-bottom: 20px
    height: auto !important

  %block-padding
    padding:
      left: 3%
      right: 3%

  %block-margin-bottom
    margin-bottom: 30px

  img
    width: 100%

  .post
    > header h3
      @extend %block-padding

    > article,
    > .content,
    > div
      @extend %block-padding

    article
      > header
        h1
          font-size: rem(32)

        .post-utils .actions
          float: none

        .zoom-in-out,
        .send-email,
        .read-latter
          background-color: #E3E3E3
          padding:
            left: 3%
            right: 3%
          border-radius: 6px

        .send-email
          margin-left: 0

        .zoom-in-out,
        .read-latter
          padding:
            top: 10px
            bottom: 11px

        .read-latter
          margin-left: 4px

      .author,
      .location,
      .print,
      .print > a
        +hide-on-mobile

      .send-email
        font-size: rem(21)
        margin-left: 3px
        padding:
          top: 5px
          bottom: 8px
        a > span
          display: none


  .page
    > footer
      margin-top: 30px

    > header
      border-bottom: 1px solid palette(gray, light)
      padding:
        top: 12px
        bottom: 12px

      .search,
      .user-actions,
      nav
        +hide-on-mobile

      h1
        margin: 0 auto
        float: none
        +size(193px auto)

  .mobile-buttons
    position: absolute
    top: 0
    width: 100%

    button
      background: none
      border: none
      color: palette(sections, atualiza-enem)
      font-size: rem(21)

    .show-navigation,
    .show-search
      display: block
      position: absolute

    .show-navigation
      top: 22px
      left: 18px

    .show-search
      top: 20px
      right: 18px

  [role='banner']
    padding: 0
    @extend %block-margin-bottom

    h2
      font-size: rem(27)

    figure,
    .figure,
    .info
      @extend %full-size

    .info
      margin-top: 20px
      @extend %block-padding

  .notice
    @extend %block-margin-bottom

    h3
      font-size: rem(27)

    .highlight
      .caption,
      figcaption
        position: inherit

      &.atualiza-enem
        margin-top: 30px

      .atualiza-enem
        background: palette(sections, atualiza-enem)
        filter: none
        height: 100%
        padding-top: 0
        overflow: hidden
        text-align: center

        h3
          width: 100%
          font-size: rem(27)
          margin:
            top: 10px
            bottom: 20px

        p
          margin-bottom: 30px

        .button--download
          float: none
          +default-button(black)

    &.triple
      figure,
      .figure
        margin-bottom: 30px

    > .content
      padding-top: 0

    .caption,
    figcaption
      @extend %block-padding

    &.double,
    &.triple
      .highlight,
      .figure,
      figure
        @extend %full-size

      img
        width: 100%

  .blog-sections
    @extend %block-margin-bottom
    @extend %block-padding

    li
      @extend %block-list-item

      img
        float: left
        margin-right: 5px
        width: 30%

      h4
        margin-top: 0

  .subscribe-to-news
    @extend %block-margin-bottom

    > .content
      margin:
        top: 0
        left: 3%
        right: 3%

    form
      float: none

    .inputs
      margin-top: 10px
      width: 40%

    .actions
      float: left
      margin:
        top: 38px
        left: 10px

  .top-news
    @extend %block-margin-bottom
    margin-bottom: 20px
    @extend %block-padding

    li
      @extend %block-list-item

  .top-by-category
    +hide-on-mobile

  body
    .copyright
      @extend %block-padding
      a,
      p
        float: none
        text-align: left

    .links
      @extend %block-padding
      .utils
        float: left

        li:first-child
          margin-left: 0

  body
    article
      blockquote
        &.highlight
          padding:
            left: 0
            right: 0
          font-size: rem(26)
        > .quote
          +hide-on-mobile

    .post blockquote footer
      text-align: left

  blockquote.alignleft
    width: 50%

  .focused,
  .opine
    margin:
      left: 3%
      right: 3%

  .focused .content > ol li
    > p
      width: 100%
      margin-left: 0
      margin-top: 52px

    > span
      width: 100%
      height: auto
      min-height: 20px
      border-radius: 5px 5px 0 0
      padding:
        top: 12px
        bottom: 12px

  .page
    form.filters li
      width: 100% !important

      &:first-child
        margin-bottom: 0

    article.infograficos > section
      width: 100%

      img
        width: 100%

    .infografico
      img
        width: 100%

      .info,
      figure
        width: 100%

    .post
      .related
        > header h3
          font-size: rem(26)
          margin-left: 0

    .call-to-action
      > .content
        width: 100%

    section.users
      .login
        width: 100%

      .connect
        width: 284px
        margin: 0 auto

      .or
        width: 100%
        height: 22px
        text-align: center
        margin: 20px 0

        &:after
          height: 1px
          width: 100%
          left: 0
          top: 15px

        > span
          margin:
            top: 0
            left: auto
            right: auto
          +size(25px 25px)

  .highlight
    @each $item in $sections
      figcaption,
      .caption
        background-color: palette(sections, $item)

